Update tests and dependencies